logs/terraai-preprocessing.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/terraai_preprocessing'...
Listing './lib/python3.5/site-packages/terraai_preprocessing/combinatorics'...
Compiling './lib/python3.5/site-packages/terraai_preprocessing/combinatorics/API_helpers_comb.py'...
***   File "./lib/python3.5/site-packages/terraai_preprocessing/combinatorics/API_helpers_comb.py", line 70
    print "Exception.  The argument was {}.".format(d2)
                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/terraai_preprocessing/combinatorics/API_main_comb.py'...
***   File "./lib/python3.5/site-packages/terraai_preprocessing/combinatorics/API_main_comb.py", line 29
    print "Error : Both request parameters cannot be same"
                                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/terraai_preprocessing/preprocessing'...
Compiling './lib/python3.5/site-packages/terraai_preprocessing/preprocessing/pp_helpers.py'...
***   File "./lib/python3.5/site-packages/terraai_preprocessing/preprocessing/pp_helpers.py", line 45
    print "Please enter your credentials in config.json. Follow steps from confluence Preprocessing page"
                                                                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/terraai_preprocessing/preprocessing/pp_main.py'...
***   File "./lib/python3.5/site-packages/terraai_preprocessing/preprocessing/pp_main.py", line 36
    print "Reading well id -", well
                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/terraai_preprocessing-1.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
